--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
     "@testing-library/user-event": "^7.1.2",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
+    "react-particles-js": "^2.7.1",
     "react-reveal": "^1.2.2",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.3.0",
+    "react-typing-effect": "^2.0.3",
     "semantic-ui-react": "^0.88.2",
     "styled-components": "^4.4.1"
   },
