--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-dom": "^16.12.0",
     "react-dropzone": "^11.0.2",
     "react-hook-form": "^6.0.8",
+    "react-lottie": "^1.2.3",
     "react-particles-js": "^2.7.1",
     "react-reveal": "^1.2.2",
     "react-router-dom": "^5.1.2",
