--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-reveal": "^1.2.2",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.1",
+    "react-scroll": "^1.8.1",
     "react-typing-effect": "^2.0.3",
     "semantic-ui-react": "^0.88.2",
     "styled-components": "^4.4.1"
